--- a/contact.html
+++ b/contact.html
@@ -39,47 +39,57 @@
   </div>
 </header>
 
-<section class="hero">
-  <div class="container hero-inner">
-    <h1>Premium Menswear, <span class="accent">Perfectly Stitched</span>.</h1>
-    <p class="lead">At AMSUCC BESPOKE, we craft timeless pieces — agbada, kaftan, shirts, trousers and bespoke suits — tailored to your exact fit and lifestyle.</p>
-    <div class="hero-cta">
-      <a class="btn-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an Appointment</a>
-      <a class="btn-ghost" href="gallery.html">View Gallery</a>
-    </div>
+<section class="page-hero">
+  <div class="container">
+    <h1>Contact</h1>
+    <p class="lead">We're ready when you are. Visit, call or send a message.</p>
   </div>
 </section>
 
-<section class="about container">
-  <h2>About AMSUCC BESPOKE</h2>
-  <p>We are a Lagos-based menswear brand dedicated to excellence in fit, fabric and finishing. From regal nativewear to sharp English tailoring, our work is defined by clean lines, durable construction and elegant details. Every stitch is intentional — because you deserve nothing less.</p>
-  <ul class="pill-list">
-    <li>Agbada &amp; Kaftan</li>
-    <li>Shirts &amp; Trousers</li>
-    <li>Custom Suits</li>
-    <li>Embroidery &amp; Finishing</li>
-  </ul>
-</section>
+<section class="container contact-grid">
+  <div class="contact-card">
+    <h3>Visit Us</h3>
+    <p>11, Allah Dey Street, Oko-Afo, Badagry, Lagos</p>
+    <div class="map-wrap">
+      <iframe
+        title="AMSUCC Location"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://www.google.com/maps?q=11%20Allah%20Dey%20Street%20Oko-Afo%20Badagry%20Lagos&output=embed">
+      </iframe>
+    </div>
+  </div>
 
-<section class="feature-grid container">
-  <article>
-    <h3>Bespoke Fit</h3>
-    <p>Measurements taken with precision to achieve a refined silhouette that moves with you.</p>
-  </article>
-  <article>
-    <h3>Quality Fabrics</h3>
-    <p>We source breathable, durable fabrics that drape beautifully and last.</p>
-  </article>
-  <article>
-    <h3>Expert Craft</h3>
-    <p>Clean seams, strong hems, neat buttonholes — finishing that speaks for itself.</p>
-  </article>
-</section>
+  <div class="contact-card">
+    <h3>Talk to Us</h3>
+    <ul class="contact-list">
+      <li><strong>WhatsApp:</strong> <a href="https://wa.me/2348079444199" target="_blank" rel="noopener">+234 807 944 4199</a></li>
+      <li><strong>Phone:</strong> <a href="tel:+2348079444199">+234 807 944 4199</a></li>
+      <li><strong>Email:</strong> <a href="mailto:fawazabdulkareem606@gmail.com">fawazabdulkareem606@gmail.com</a></li>
+      <li><strong>Instagram:</strong> <a href="https://www.instagram.com/amsucc_?igsh=eGF3cjN1aHZkcTZj&utm_source=qr" target="_blank" rel="noopener">@amsucc_</a></li>
+      <li><strong>Facebook:</strong> <a href="https://www.facebook.com/share/14H4D5qduU1/?mibextid=wwXIfr" target="_blank" rel="noopener">AMSUCC BESPOKE</a></li>
+      <li><strong>TikTok:</strong> <a href="https://www.tiktok.com/@amsucc_bespoke?_t=ZS-8zKn89RgIKq&_r=1" target="_blank" rel="noopener">@amsucc_bespoke</a></li>
+    </ul>
 
-<section class="cta-band">
-  <div class="container">
-    <h2>Ready to look your best?</h2>
-    <a class="btn-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Chat on WhatsApp</a>
+    <a class="btn-cta full" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book Appointment on WhatsApp</a>
+  </div>
+
+  <div class="contact-card">
+    <h3>Send a Message</h3>
+    <form class="contact-form" name="contact" method="POST" data-netlify="true">
+      <input type="hidden" name="form-name" value="contact">
+      <label>Full Name
+        <input type="text" name="name" required>
+      </label>
+      <label>Email
+        <input type="email" name="email" required>
+      </label>
+      <label>Message
+        <textarea name="message" rows="5" required></textarea>
+      </label>
+      <button type="submit" class="btn-cta">Send Message</button>
+    </form>
+    <p class="form-note">Prefer chat? Use WhatsApp for the fastest response.</p>
   </div>
 </section>
 
