--- a/gallery.html
+++ b/gallery.html
@@ -39,48 +39,20 @@
   </div>
 </header>
 
-<section class="hero">
-  <div class="container hero-inner">
-    <h1>Premium Menswear, <span class="accent">Perfectly Stitched</span>.</h1>
-    <p class="lead">At AMSUCC BESPOKE, we craft timeless pieces — agbada, kaftan, shirts, trousers and bespoke suits — tailored to your exact fit and lifestyle.</p>
-    <div class="hero-cta">
-      <a class="btn-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an Appointment</a>
-      <a class="btn-ghost" href="gallery.html">View Gallery</a>
-    </div>
-  </div>
-</section>
-
-<section class="about container">
-  <h2>About AMSUCC BESPOKE</h2>
-  <p>We are a Lagos-based menswear brand dedicated to excellence in fit, fabric and finishing. From regal nativewear to sharp English tailoring, our work is defined by clean lines, durable construction and elegant details. Every stitch is intentional — because you deserve nothing less.</p>
-  <ul class="pill-list">
-    <li>Agbada &amp; Kaftan</li>
-    <li>Shirts &amp; Trousers</li>
-    <li>Custom Suits</li>
-    <li>Embroidery &amp; Finishing</li>
-  </ul>
-</section>
-
-<section class="feature-grid container">
-  <article>
-    <h3>Bespoke Fit</h3>
-    <p>Measurements taken with precision to achieve a refined silhouette that moves with you.</p>
-  </article>
-  <article>
-    <h3>Quality Fabrics</h3>
-    <p>We source breathable, durable fabrics that drape beautifully and last.</p>
-  </article>
-  <article>
-    <h3>Expert Craft</h3>
-    <p>Clean seams, strong hems, neat buttonholes — finishing that speaks for itself.</p>
-  </article>
-</section>
-
-<section class="cta-band">
+<section class="page-hero">
   <div class="container">
-    <h2>Ready to look your best?</h2>
-    <a class="btn-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Chat on WhatsApp</a>
+    <h1>Gallery</h1>
+    <p class="lead">A selection of our recent works. Elegance in every stitch.</p>
   </div>
+</section>
+
+<section class="container gallery-grid">
+  <!-- Professional responsive grid with external placeholders (replace with your photos later) -->
+  <figure><img src="https://picsum.photos/seed/amsucc1/800/1000" alt="AMSUCC look 1"><figcaption>Look 1</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc2/800/1000" alt="AMSUCC look 2"><figcaption>Look 2</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc3/800/1000" alt="AMSUCC look 3"><figcaption>Look 3</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc4/800/1000" alt="AMSUCC look 4"><figcaption>Look 4</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc5/800/1000" alt="AMSUCC look 5"><figcaption>Look 5</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc6/800/1000" alt="AMSUCC look 6"><figcaption>Look 6</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc7/800/1000" alt="AMSUCC look 7"><figcaption>Look 7</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc8/800/1000" alt="AMSUCC look 8"><figcaption>Look 8</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc9/800/1000" alt="AMSUCC look 9"><figcaption>Look 9</figcaption></figure>
+</section>
+
+<section class="container note">
+  <p>Want this look tailored to you? <a class="inline-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an appointment</a>.</p>
 </section>
 
 
