--- a/gallery.html
+++ b/gallery.html
@@ -17,11 +17,7 @@
   <div class="container nav-wrapper">
     <a class="brand" href="index.html" aria-label="AMSUCC Home">
 <span class="logo-mark" aria-hidden="true">
-  <svg viewBox="0 0 100 100" role="img" aria-label="AMSUCC">
-    <rect x="3" y="3" width="94" height="94" rx="12" class="monogram-bg"/>
-    <path d="M50 30 L65 65 L60 65 L57.5 57.5 L42.5 57.5 L40 65 L35 65 Z" class="monogram-text" fill="currentColor"/>
-    <path d="M47.5 52.5 L52.5 52.5 L50 42.5 Z" fill="#111"/>
-  </svg>
+  <img src="favicon.png" alt="AMSUCC" style="width: 42px; height: 42px;">
 </span>
       <span class="brand-text">AMSUCC <em>BESPOKE</em></span>
     </a>
@@ -48,7 +44,7 @@
 
 <section class="container gallery-grid">
   <!-- Professional responsive grid with external placeholders (replace with your photos later) -->
-  <figure><img src="https://picsum.photos/seed/amsucc1/800/1000" alt="AMSUCC look 1"><figcaption>Look 1</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc2/800/1000" alt="AMSUCC look 2"><figcaption>Look 2</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc3/800/1000" alt="AMSUCC look 3"><figcaption>Look 3</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc4/800/1000" alt="AMSUCC look 4"><figcaption>Look 4</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc5/800/1000" alt="AMSUCC look 5"><figcaption>Look 5</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc6/800/1000" alt="AMSUCC look 6"><figcaption>Look 6</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc7/800/1000" alt="AMSUCC look 7"><figcaption>Look 7</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc8/800/1000" alt="AMSUCC look 8"><figcaption>Look 8</figcaption></figure><figure><img src="https://picsum.photos/seed/amsucc9/800/1000" alt="AMSUCC look 9"><figcaption>Look 9</figcaption></figure>
+ <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/364f8c55a289538aa9073df31adc0e43.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 </section>
 
 <section class="container note">
