--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
   <div class="container nav-wrapper">
     <a class="brand" href="index.html" aria-label="AMSUCC Home">
 <span class="logo-mark" aria-hidden="true">
-  <svg viewBox="0 0 100 100" role="img" aria-label="AMSUCC">
-    <rect x="3" y="3" width="94" height="94" rx="12" class="monogram-bg"/>
-    <path d="M50 30 L65 65 L60 65 L57.5 57.5 L42.5 57.5 L40 65 L35 65 Z" class="monogram-text" fill="currentColor"/>
-    <path d="M47.5 52.5 L52.5 52.5 L50 42.5 Z" fill="#111"/>
-  </svg>
+  <img src="favicon.png" alt="AMSUCC" style="width: 42px; height: 42px;">
 </span>
       <span class="brand-text">AMSUCC <em>BESPOKE</em></span>
     </a>
