--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AMSUCC BESPOKE — Perfectly stitched.</title>
-  <meta name="description" content="AMSUCC BESPOKE crafts premium menswear in Lagos: agbada, kaftan, shirts, trousers, and bespoke suits. Perfectly stitched. Book an appointment on WhatsApp.">
-  <meta name="keywords" content="AMSUCC, bespoke, tailor, menswear, agbada, kaftan, native wear, suits, Lagos, Badagry, Oko-Afo, tailoring">
+  <meta name="description" content="AMSUCC BESPOKE crafts premium menswear in Lagos: agbada, kaftan, shirts, and trousers. Perfectly stitched. Book an appointment on WhatsApp.">
+  <meta name="keywords" content="AMSUCC, bespoke, tailor, menswear, agbada, kaftan, native wear, Lagos, Badagry, Oko-Afo, tailoring">
   <link rel="icon" type="image/png" href="favicon.png">
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="xgQlScEj0e2moRsmaMGyKDRyauUk5gFkqAnOwGQDsAw" />
@@ -37,19 +37,47 @@
   </div>
 </header>
 
-<section class="page-hero fade-in">
-  <div class="container">
-    <h1>Gallery</h1>
-    <p class="lead">A selection of our recent works. Elegance in every stitch.</p>
+<section class="hero fade-in">
+  <div class="container hero-inner">
+    <h1>Premium Menswear, <span class="accent">Perfectly Stitched</span>.</h1>
+    <p class="lead">At AMSUCC BESPOKE, we craft timeless pieces — agbada, kaftan, shirts and trousers — tailored to your exact fit and lifestyle.</p>
+    <div class="hero-cta">
+      <a class="btn-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an Appointment</a>
+      <a class="btn-ghost" href="gallery.html">View Gallery</a>
+    </div>
   </div>
 </section>
 
-<section class="container gallery-grid fade-in">
-  <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/f5f94178a1f7530e98780a848c445dfd.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+<section class="about container fade-in">
+  <h2>About AMSUCC BESPOKE</h2>
+  <p>Founded by ABDULKAREEM FAWAZ, the visionary behind AMSUCC BESPOKE, we are a Lagos-based menswear brand dedicated to excellence in fit, fabric, and finishing—offering everything from regal nativewear to sharp English tailoring, all defined by clean lines, durable construction, and elegant details, with every stitch intentional because you deserve nothing less.</p>
+  <ul class="pill-list">
+    <li>Agbada &amp; Kaftan</li>
+    <li>Shirts &amp; Trousers</li>
+    <li>Embroidery &amp; Finishing</li>
+  </ul>
 </section>
 
-<section class="container note fade-in">
-  <p>Want this look tailored to you? <a class="inline-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an appointment</a>.</p>
+<section class="feature-grid container fade-in">
+  <article>
+    <h3>Bespoke Fit</h3>
+    <p>Measurements taken with precision to achieve a refined silhouette that moves with you.</p>
+  </article>
+  <article>
+    <h3>Quality Fabrics</h3>
+    <p>We source breathable, durable fabrics that drape beautifully and last.</p>
+  </article>
+  <article>
+    <h3>Expert Craft</h3>
+    <p>Clean seams, strong hems, neat buttonholes — finishing that speaks for itself.</p>
+  </article>
+</section>
+
+<section class="cta-band fade-in">
+  <div class="container">
+    <h2>Ready to look your best?</h2>
+    <a class="btn-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Chat on WhatsApp</a>
+  </div>
 </section>
 
 <footer class="site-footer">
