--- a/index.html
+++ b/index.html
@@ -73,6 +73,28 @@
   </article>
 </section>
 
+<!-- Testimonials Section -->
+<section class="testimonials container fade-in">
+  <h2>What Our Clients Say</h2>
+  <div class="testimonial-grid">
+    <div class="testimonial-card">
+      <div class="stars">★★★★★</div>
+      <p>"AMSUCC delivered beyond my expectations! The fit of my agbada was perfect for my wedding. Attention to detail is exceptional."</p>
+      <div class="client">— Ibrahim A.</div>
+    </div>
+    <div class="testimonial-card">
+      <div class="stars">★★★★★</div>
+      <p>"Fast turnaround and premium quality. I've gotten multiple kaftans and shirts made - consistently excellent work."</p>
+      <div class="client">— Chinedu M.</div>
+    </div>
+    <div class="testimonial-card">
+      <div class="stars">★★★★★</div>
+      <p>"The best tailor in Lagos! Professional measurements, quality fabrics, and perfect stitching. Highly recommended!"</p>
+      <div class="client">— Adewale S.</div>
+    </div>
+  </div>
+</section>
+
 <section class="cta-band fade-in">
   <div class="container">
     <h2>Ready to look your best?</h2>
