--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
     
     <div class="portfolio-item">
       <div class="portfolio-image">
-        <img src="https://via.placeholder.com/400x500/111111/666666?text=Bespoke+Suit" alt="Custom Bespoke Suit" loading="lazy">
+        <img src="https://via.placeholder.com/400x500/111111/666666?text=Shirt+%26+Trousers" alt="Custom Shirt and Trousers" loading="lazy">
         <div class="portfolio-overlay">
           <span class="portfolio-category">Shirt & Trousers</span>
         </div>
       </div>
       <div class="portfolio-info">
-        <h3>Bespoke Suit</h3>
+        <h3>Bespoke Shirt & Trousers</h3>
         <p>Perfectly tailored English wear</p>
       </div>
     </div>
@@ -162,10 +162,28 @@
   </div>
   
   <div class="portfolio-cta">
-    <a href="gallery.html" class="btn-ghost">View Full Gallery</a>
-    <a href="https://wa.me/2348079444199" class="btn-cta" target="_blank" rel="noopener">Book This Look</a>
+    <a href="gallery.html" class="btn-cta">View Full Gallery</a>
   </div>
 </section>
+
+<!-- Statistics Counter -->
+<section class="stats-section container fade-in">
+  <div class="stats-grid">
+    <div class="stat-item">
+      <div class="stat-number" data-target="500">0</div>
+      <div class="stat-label">Happy Customers</div>
+    </div>
+    <div class="stat-item">
+      <div class="stat-number" data-target="1000">0</div>
+      <div class="stat-label">Garments Tailored</div>
+    </div>
+    <div class="stat-item">
+      <div class="stat-number" data-target="98">0</div>
+      <div class="stat-label">Client Satisfaction</div>
+    </div>
+  </div>
+</section>
+
 
 <!-- Ct band -->
 <section class="cta-band fade-in">
