--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             <img src="https://i.postimg.cc/HxJvZGnR/2-CF76677-775-F-45-CD-8316-897-A9525-FA1-E.jpg" alt="Embroidered Kaftan design by AMSUCC BESPOKE" loading="lazy">
           </div>
           <div class="portfolio-info">
-            <h4>Embroidered Kaftan</h4>
-            <p>Premium kaftan with detailed hand embroidery on luxury fabric</p>
+            <h4>Kaftan Detail</h4>
+            <p>Premium kaftan</p>
           </div>
         </div>
         <div class="portfolio-slide">
@@ -176,7 +176,7 @@
             <img src="https://i.postimg.cc/Ls1d0ZJF/726-F423-D-A05-E-43-EC-9103-56968043-ADCF.jpg" alt="Detailed Kaftan embroidery work by AMSUCC BESPOKE" loading="lazy">
           </div>
           <div class="portfolio-info">
-            <h4>Kaftan Detail</h4>
+            <h4>Embroidered Kaftan</h4>
             <p>Close-up view of intricate embroidery and premium stitching</p>
           </div>
         </div>
@@ -211,7 +211,7 @@
           </div>
           <div class="portfolio-info">
             <h4>Bespoke Shirt and Trouser</h4>
-            <p>Perfectly tailored dress shirt with custom measurements</p>
+            <p>Custom fitted trousers with perfect drape and finish</p>
           </div>
         </div>
         <div class="portfolio-slide">
@@ -220,7 +220,7 @@
           </div>
           <div class="portfolio-info">
             <h4>Bespoke Shirt and Trouser</h4>
-            <p>Custom fitted trousers with perfect drape and finish</p>
+            <p>Perfectly tailored dress shirt with custom measurements</p>
           </div>
         </div>
         <div class="slider-controls">
@@ -263,7 +263,7 @@
           </div>
           <div class="portfolio-info">
             <h4>Complete Native Set</h4>
-            <p>Full traditional attire showcasing back design and fit</p>
+            <p>Full traditional attire showcasing trouser and native cap</p>
           </div>
         </div>
         <div class="slider-controls">
