--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AMSUCC BESPOKE — Perfectly stitched.</title>
-  <meta name="description" content="AMSUCC BESPOKE crafts premium menswear in Lagos: agbada, kaftan, shirts, and trousers. Perfectly stitched. Book an appointment on WhatsApp.">
-  <meta name="keywords" content="AMSUCC, bespoke, tailor, menswear, agbada, kaftan, native wear, Lagos, Badagry, Oko-Afo, tailoring">
+  <title>FAWLUX BESPOKE — Perfectly stitched.</title>
+  <meta name="description" content="FAWLUX BESPOKE crafts premium menswear in Lagos: agbada, kaftan, shirts, and trousers. Perfectly stitched. Book an appointment on WhatsApp.">
+  <meta name="keywords" content="FAWLUX, bespoke, tailor, menswear, agbada, kaftan, native wear, Lagos, Badagry, Oko-Afo, tailoring">
   <link rel="icon" type="image/png" href="favicon.png">
   <!-- Google Search Console Verification -->
-  <meta name="google-site-verification" content="xgQlScEj0e2moRsmaMGyKDRyauUk5gFkqAnOwGQDsAw" />
+  <meta name="google-site-verification" content="rxFMCBjufeR1PpdXxgAGTrP8B1YquOBg6XkGm3bnGa4" />
+  
+  <!-- Google Business Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Tailor",
+    "name": "Fawlux",
+    "description": "Premium menswear tailoring specializing in agbada, kaftan, and bespoke suits in Lagos",
+    "url": "https://fawlux.netlify.app/",
+    "telephone": "+2348079444199",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "11, Allah Dey Street, Oko-Afo",
+      "addressLocality": "Badagry",
+      "addressRegion": "Lagos",
+      "addressCountry": "NG"
+    },
+    "openingHours": [
+      "Mo-Fr 09:00-19:00",
+      "Sa 09:00-18:00"
+    ],
+    "priceRange": "₦₦₦"
+  }
+  </script>
+  
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
@@ -18,22 +43,41 @@
 <!-- Loading Spinner -->
 <div id="loading-spinner" class="loading-spinner">
   <div class="spinner"></div>
-  <p>AMSUCC BESPOKE</p>
+  <p>FAWLUX BESPOKE</p>
 </div>
 
+<!-- Floating WhatsApp Button -->
+<a href="https://wa.me/2348079444199?text=Hello%20FAWLUX!%20I'd%20like%20to%20book%20an%20appointment." 
+   class="whatsapp-float" 
+   target="_blank" 
+   rel="noopener"
+   aria-label="Chat on WhatsApp">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+    <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893-.001-3.189-1.248-6.189-3.515-8.452"/>
+  </svg>
+</a>
 
 <header class="site-header">
   <div class="container nav-wrapper">
-    <a class="brand" href="index.html" aria-label="AMSUCC Home">
-      <span class="logo-mark" aria-hidden="true">
-        <img src="favicon.png" alt="AMSUCC" style="width: 42px; height: 42px;">
-      </span>
-      <span class="brand-text">AMSUCC <em>BESPOKE</em></span>
+    <a class="brand" href="index.html" aria-label="FAWLUX Home">
+      <span class="brand-text">FAWLUX <em>BESPOKE</em></span>
     </a>
 
-    <button class="hamburger" id="hamburger" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-nav">
-      <span></span><span></span><span></span>
-    </button>
+    <div class="header-controls">
+      <!-- Theme Switcher -->
+      <button class="theme-switcher" id="themeSwitcher" aria-label="Switch theme">
+        <svg class="theme-icon sun" viewBox="0 0 24 24" width="20" height="20">
+          <path fill="currentColor" d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM6.34 5.16l-1.42 1.42c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0l1.42-1.42c.39-.39.39-1.02 0-1.41a.996.996 0 00-1.41 0zm13.08 12.42l1.42 1.42c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41l-1.42-1.42c-.39-.39-1.02-.39-1.41 0a.996.996 0 000 1.41zM5.16 17.66l1.42-1.42c.39-.39.39-1.02 0-1.41a.996.996 0 00-1.41 0l-1.42 1.42c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0zm12.42-13.08l1.42-1.42c.39-.39.39-1.02 0-1.41a.996.996 0 00-1.41 0l-1.42 1.42c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0z"/>
+        </svg>
+        <svg class="theme-icon moon" viewBox="0 0 24 24" width="20" height="20">
+          <path fill="currentColor" d="M9.37 5.51A7.35 7.35 0 009.1 7.5c0 4.08 3.32 7.4 7.4 7.4.68 0 1.35-.09 1.99-.27A7.014 7.014 0 0112 19c-3.86 0-7-3.14-7-7 0-2.93 1.81-5.45 4.37-6.49zM12 3a9 9 0 109 9c0-.46-.04-.92-.1-1.36a5.389 5.389 0 01-4.4 2.26 5.403 5.403 0 01-3.14-9.8c-.44-.06-.9-.1-1.36-.1z"/>
+        </svg>
+      </button>
+
+      <button class="hamburger" id="hamburger" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-nav">
+        <span></span><span></span><span></span>
+      </button>
+    </div>
 
     <nav id="primary-nav" class="nav-links" aria-label="Primary">
       <a href="index.html">Home</a>
@@ -44,10 +88,11 @@
   </div>
 </header>
 
+<!-- Rest of your index.html content remains exactly the same -->
 <section class="hero fade-in">
   <div class="container hero-inner">
     <h1>Premium Menswear, <span class="accent">Perfectly Stitched</span>.</h1>
-    <p class="lead">At AMSUCC BESPOKE, we craft timeless pieces — agbada, kaftan, shirts and trousers — tailored to your exact fit and lifestyle.</p>
+    <p class="lead">At FAWLUX BESPOKE, we craft timeless pieces — agbada, kaftan, shirts and trousers — tailored to your exact fit and lifestyle.</p>
     <div class="hero-cta">
       <a class="btn-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an Appointment</a>
       <a class="btn-ghost" href="gallery.html">View Gallery</a>
@@ -55,9 +100,14 @@
   </div>
 </section>
 
+<!-- All other sections remain exactly the same -->
 <section class="about container fade-in">
-  <h2>About AMSUCC BESPOKE</h2>
-  <p>Founded by ABDULKAREEM FAWAZ, the visionary behind AMSUCC BESPOKE, we are a Lagos-based menswear brand dedicated to excellence in fit, fabric, and finishing—offering everything from regal nativewear to sharp English tailoring, all defined by clean lines, durable construction, and elegant details, with every stitch intentional because you deserve nothing less.</p>
+  <h2>About FAWLUX </h2>
+  <p>Founded by Abdulkareem Fawaz, the visionary behind FAWLUX (formerly AMSUCC BESPOKE),
+we are a Lagos-based menswear brand driven by precision, artistry, and timeless style.
+From regal nativewear to refined English tailoring, every piece embodies excellence in fit, fabric, and finishing —
+defined by clean lines, lasting craftsmanship, and understated elegance.
+Every stitch is intentional — because you deserve nothing less.</p>
   <ul class="pill-list">
     <li>Agbada &amp; Kaftan</li>
     <li>Shirts &amp; Trousers</li>
@@ -83,17 +133,17 @@
 <!-- Testimonials Section -->
 <section class="testimonials container fade-in">
   <h2>What Our Clients Say</h2>
-  
+
   <div class="testimonials-slider">
     <!-- Testimonial 1 -->
     <div class="testimonial-slide active">
       <div class="testimonial-card">
         <div class="stars">★★★★★</div>
-        <p>"AMSUCC delivered beyond my expectations! The fit of my agbada was perfect for my wedding. Attention to detail is exceptional."</p>
+        <p>"FAWLUX delivered beyond my expectations! The fit of my agbada was perfect for my wedding. Attention to detail is exceptional."</p>
         <div class="client">— Ibrahim A.</div>
       </div>
     </div>
-    
+
     <!-- Testimonial 2 -->
     <div class="testimonial-slide">
       <div class="testimonial-card">
@@ -102,7 +152,7 @@
         <div class="client">— Chinedu M.</div>
       </div>
     </div>
-    
+
     <!-- Testimonial 3 -->
     <div class="testimonial-slide">
       <div class="testimonial-card">
@@ -138,7 +188,7 @@
 <section class="portfolio-highlights container fade-in">
   <h2>Our Featured Work</h2>
   <p class="section-subtitle">A glimpse of our craftsmanship in agbada, kaftan, and bespoke tailoring</p>
-  
+
   <div class="portfolio-sections">
     <!-- Agbada Section - Single Image -->
     <div class="portfolio-section">
@@ -147,7 +197,7 @@
       </div>
       <div class="portfolio-item single-image">
         <div class="portfolio-image">
-          <img src="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg" alt="Premium Agbada with gold embroidery by AMSUCC BESPOKE" loading="lazy">
+          <img src="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg" alt="Premium Agbada with gold embroidery by FAWLUX BESPOKE" loading="lazy">
         </div>
         <div class="portfolio-info">
           <h4>Royal Agbada</h4>
@@ -164,7 +214,7 @@
       <div class="portfolio-slider small-slider">
         <div class="portfolio-slide active">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/HxJvZGnR/2-CF76677-775-F-45-CD-8316-897-A9525-FA1-E.jpg" alt="Embroidered Kaftan design by AMSUCC BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/HxJvZGnR/2-CF76677-775-F-45-CD-8316-897-A9525-FA1-E.jpg" alt="Embroidered Kaftan design by FAWLUX BESPOKE" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Kaftan Detail</h4>
@@ -173,7 +223,7 @@
         </div>
         <div class="portfolio-slide">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/Ls1d0ZJF/726-F423-D-A05-E-43-EC-9103-56968043-ADCF.jpg" alt="Detailed Kaftan embroidery work by AMSUCC BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/Ls1d0ZJF/726-F423-D-A05-E-43-EC-9103-56968043-ADCF.jpg" alt="Detailed Kaftan embroidery work by FAWLUX BESPOKE" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Embroidered Kaftan</h4>
@@ -207,7 +257,7 @@
       <div class="portfolio-slider small-slider">
         <div class="portfolio-slide active">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/MHQ4TkJC/1-DE946-ED-13-A9-4-A88-B72-C-C857690-E688-C.jpg" alt="Bespoke Shirt by AMSUCC BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/MHQ4TkJC/1-DE946-ED-13-A9-4-A88-B72-C-C857690-E688-C.jpg" alt="Bespoke Shirt by FAWLUX BESPOKE" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Bespoke Shirt and Trouser</h4>
@@ -216,7 +266,7 @@
         </div>
         <div class="portfolio-slide">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/1z9RkB17/6606-A1-B9-ED4-A-4-DCC-9-EF1-FA4-BE8642-D04.jpg" alt="Custom tailored trousers by AMSUCC BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/1z9RkB17/6606-A1-B9-ED4-A-4-DCC-9-EF1-FA4-BE8642-D04.jpg" alt="Custom tailored trousers by FAWLUX BESPOKE" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Bespoke Shirt and Trouser</h4>
@@ -250,7 +300,7 @@
       <div class="portfolio-slider small-slider">
         <div class="portfolio-slide active">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/MG8DY2wW/F23-CBE3-E-6-FC8-404-E-B8-F1-BE3-E96-EA758-C.jpg" alt="Traditional native attire by AMSUCC BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/MG8DY2wW/F23-CBE3-E-6-FC8-404-E-B8-F1-BE3-E96-EA758-C.jpg" alt="Traditional native attire by FAWLUX BESPOKE" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Complete Native Set</h4>
@@ -259,7 +309,7 @@
         </div>
         <div class="portfolio-slide">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/QxFgcN2c/F88-AD4-C4-A386-4058-ADA8-0-E5-BE93-C12-F6.jpg" alt="Complete native wear set by AMSUCC BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/QxFgcN2c/F88-AD4-C4-A386-4058-ADA8-0-E5-BE93-C12-F6.jpg" alt="Complete native wear set by FAWLUX BESPOKE" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Complete Native Set</h4>
@@ -285,7 +335,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="portfolio-cta">
     <a href="gallery.html" class="btn-cta">View Full Gallery</a>
   </div>
@@ -310,7 +360,7 @@
 </section>
 
 
-<!-- Ct band -->
+<!-- CTA band -->
 <section class="cta-band fade-in">
   <div class="container">
     <h2>Ready to look your best?</h2>
@@ -321,7 +371,7 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <div class="foot-brand">
-      <div class="brand-line">AMSUCC <em>BESPOKE</em></div>
+      <div class="brand-line">FAWLUX <em>BESPOKE</em></div>
       <div class="tagline">Perfectly stitched.</div>
     </div>
     <div class="foot-links">
@@ -330,18 +380,18 @@
       <a href="contact.html">Contact</a>
     </div>
     <div class="foot-social">
-      <a aria-label="Instagram" href="https://www.instagram.com/amsucc_?igsh=eGF3cjN1aHZkcTZj&utm_source=qr" target="_blank" rel="noopener">
+      <a aria-label="Instagram" href="https://www.instagram.com/fawlux_?igsh=eGF3cjN1aHZkcTZj&utm_source=qr" target="_blank" rel="noopener">
         <svg viewBox="0 0 24 24" class="icon"><path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6.5-.25a1.25 1.25 0 11-2.5 0 1.25 1.25 0 012.5 0z"/></svg>
       </a>
-      <a aria-label="Facebook" href="https://www.facebook.com/share/14H4D5qduU1/?mibextid=wwXIfr" target="_blank" rel="noopener">
+      <a aria-label="Facebook" href="https://www.facebook.com/share/17jm9NaSHL/?mibextid=wwXIfr" target="_blank" rel="noopener">
         <svg viewBox="0 0 24 24" class="icon"><path d="M13 22v-8h3l1-4h-4V7a1 1 0 011-1h3V2h-3a5 5 0 00-5 5v3H6v4h3v8h4z"/></svg>
       </a>
-      <a aria-label="TikTok" href="https://www.tiktok.com/@amsucc_bespoke?_t=ZS-8zKn89RgIKq&_r=1" target="_blank" rel="noopener">
+      <a aria-label="TikTok" href="https://www.tiktok.com/@fawlux" target="_blank" rel="noopener">
         <svg viewBox="0 0 24 24" class="icon"><path d="M21 9.5a7.5 7.5 0 01-5-1.8v6.6a6.3 6.3 0 11-5-6.1v3.7a2.6 2.6 0 102.1 2.6V2h2.9a5.7 5.7 0 004 3.8V9.5z"/></svg>
       </a>
     </div>
   </div>
-  <div class="copyright">© 2025 AMSUCC BESPOKE. All Rights Reserved.</div>
+  <div class="copyright">© 2025 FAWLUX BESPOKE. All Rights Reserved.</div>
 </footer>
 
 <!-- Back to Top Button -->
