--- a/gallery.html
+++ b/gallery.html
@@ -3,30 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AMSUCC BESPOKE — Perfectly stitched.</title>
-  <meta name="description" content="AMSUCC BESPOKE crafts premium menswear in Lagos: agbada, kaftan, shirts, trousers, and bespoke suits. Perfectly stitched. Book an appointment on WhatsApp.">
-  <meta name="keywords" content="AMSUCC, bespoke, tailor, menswear, agbada, kaftan, native wear, suits, Lagos, Badagry, Oko-Afo, tailoring">
+  <title>FAWLUX BESPOKE — Gallery</title>
+  <meta name="description" content="View FAWLUX BESPOKE gallery of premium agbada, kaftan, shirts, trousers, and bespoke suits. Perfectly stitched craftsmanship in Lagos.">
+  <meta name="keywords" content="FAWLUX, bespoke, tailor, gallery, agbada, kaftan, native wear, suits, Lagos, tailoring portfolio">
   <link rel="icon" type="image/png" href="favicon.png">
   <!-- Google Search Console Verification -->
-  <meta name="google-site-verification" content="xgQlScEj0e2moRsmaMGyKDRyauUk5gFkqAnOwGQDsAw" />
+  <meta name="google-site-verification" content="rxFMCBjufeR1PpdXxgAGTrP8B1YquOBg6XkGm3bnGa4" />
+  
+  <!-- Google Business Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "FAWLUX BESPOKE Gallery",
+    "description": "Gallery of premium menswear tailoring by FAWLUX BESPOKE",
+    "url": "https://fawlux.netlify.app/gallery.html",
+    "mainEntity": {
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "item": {
+            "@type": "Product",
+            "name": "Premium Agbada",
+            "description": "Traditional agbada with premium embroidery"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "item": {
+            "@type": "Product",
+            "name": "Custom Kaftan",
+            "description": "Embroidered kaftan designs"
+          }
+        }
+      ]
+    }
+  }
+  </script>
+  
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
 
 <body>
 
+<!-- Floating WhatsApp Button -->
+<a href="https://wa.me/2348079444199?text=Hello%20FAWLUX!%20I'd%20like%20to%20book%20an%20appointment." 
+   class="whatsapp-float" 
+   target="_blank" 
+   rel="noopener"
+   aria-label="Chat on WhatsApp">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+    <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893-.001-3.189-1.248-6.189-3.515-8.452"/>
+  </svg>
+</a>
+
 <header class="site-header">
   <div class="container nav-wrapper">
-    <a class="brand" href="index.html" aria-label="AMSUCC Home">
-      <span class="logo-mark" aria-hidden="true">
-        <img src="favicon.png" alt="AMSUCC" style="width: 42px; height: 42px;">
-      </span>
-      <span class="brand-text">AMSUCC <em>BESPOKE</em></span>
+    <a class="brand" href="index.html" aria-label="FAWLUX Home">
+      <span class="brand-text">FAWLUX <em>BESPOKE</em></span>
     </a>
 
-    <button class="hamburger" id="hamburger" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-nav">
-      <span></span><span></span><span></span>
-    </button>
+    <div class="header-controls">
+      <!-- Theme Switcher -->
+      <button class="theme-switcher" id="themeSwitcher" aria-label="Switch theme">
+        <svg class="theme-icon sun" viewBox="0 0 24 24" width="20" height="20">
+          <path fill="currentColor" d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM6.34 5.16l-1.42 1.42c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0l1.42-1.42c.39-.39.39-1.02 0-1.41a.996.996 0 00-1.41 0zm13.08 12.42l1.42 1.42c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41l-1.42-1.42c-.39-.39-1.02-.39-1.41 0a.996.996 0 000 1.41zM5.16 17.66l1.42-1.42c.39-.39.39-1.02 0-1.41a.996.996 0 00-1.41 0l-1.42 1.42c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0zm12.42-13.08l1.42-1.42c.39-.39.39-1.02 0-1.41a.996.996 0 00-1.41 0l-1.42 1.42c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0z"/>
+        </svg>
+        <svg class="theme-icon moon" viewBox="0 0 24 24" width="20" height="20">
+          <path fill="currentColor" d="M9.37 5.51A7.35 7.35 0 009.1 7.5c0 4.08 3.32 7.4 7.4 7.4.68 0 1.35-.09 1.99-.27A7.014 7.014 0 0112 19c-3.86 0-7-3.14-7-7 0-2.93 1.81-5.45 4.37-6.49zM12 3a9 9 0 109 9c0-.46-.04-.92-.1-1.36a5.389 5.389 0 01-4.4 2.26 5.403 5.403 0 01-3.14-9.8c-.44-.06-.9-.1-1.36-.1z"/>
+        </svg>
+      </button>
+
+      <button class="hamburger" id="hamburger" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-nav">
+        <span></span><span></span><span></span>
+      </button>
+    </div>
 
     <nav id="primary-nav" class="nav-links" aria-label="Primary">
       <a href="index.html">Home</a>
@@ -45,7 +100,24 @@
 </section>
 
 <section class="container gallery-grid fade-in">
-  <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/f5f94178a1f7530e98780a848c445dfd.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+  <div class="image-grid">
+    <figure class="gallery-item">
+      <img src="https://i.postimg.cc/8zRchXb5/463EFB3C-1F71-46FA-B7CE-3FFD362B04B8.png" alt="FAWLUX BESPOKE Premium Agbada Tailoring" loading="lazy">
+      <figcaption>Premium Agbada</figcaption>
+    </figure>
+    <figure class="gallery-item">
+      <img src="https://i.postimg.cc/wMkH1npF/A45B9D28-75E9-4F8A-BA67-E5824A852F6E.jpg" alt="FAWLUX BESPOKE Custom Kaftan Design" loading="lazy">
+      <figcaption>Custom Kaftan</figcaption>
+    </figure>
+    <figure class="gallery-item">
+      <img src="https://i.postimg.cc/285gd1F8/329E64F0-3C86-4FE6-9489-1A2FC3CA3A7E.jpg" alt="FAWLUX BESPOKE Bespoke Shirt & Trousers" loading="lazy">
+      <figcaption>Bespoke Shirt & Trousers</figcaption>
+    </figure>
+    <figure class="gallery-item">
+      <img src="https://i.postimg.cc/nLfdWr7K/419CD854-1538-4A36-B727-08006AF245DA.jpg" alt="FAWLUX BESPOKE Expert Craftsmanship" loading="lazy">
+      <figcaption>Expert Craftsmanship</figcaption>
+    </figure>
+  </div>
 </section>
 
 <section class="container note fade-in">
@@ -55,7 +127,7 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <div class="foot-brand">
-      <div class="brand-line">AMSUCC <em>BESPOKE</em></div>
+      <div class="brand-line">FAWLUX <em>BESPOKE</em></div>
       <div class="tagline">Perfectly stitched.</div>
     </div>
     <div class="foot-links">
@@ -64,18 +136,18 @@
       <a href="contact.html">Contact</a>
     </div>
     <div class="foot-social">
-      <a aria-label="Instagram" href="https://www.instagram.com/amsucc_?igsh=eGF3cjN1aHZkcTZj&utm_source=qr" target="_blank" rel="noopener">
+      <a aria-label="Instagram" href="https://www.instagram.com/fawlux_?igsh=eGF3cjN1aHZkcTZj&utm_source=qr" target="_blank" rel="noopener">
         <svg viewBox="0 0 24 24" class="icon"><path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6.5-.25a1.25 1.25 0 11-2.5 0 1.25 1.25 0 012.5 0z"/></svg>
       </a>
-      <a aria-label="Facebook" href="https://www.facebook.com/share/14H4D5qduU1/?mibextid=wwXIfr" target="_blank" rel="noopener">
+      <a aria-label="Facebook" href="https://www.facebook.com/share/17jm9NaSHL/?mibextid=wwXIfr" target="_blank" rel="noopener">
         <svg viewBox="0 0 24 24" class="icon"><path d="M13 22v-8h3l1-4h-4V7a1 1 0 011-1h3V2h-3a5 5 0 00-5 5v3H6v4h3v8h4z"/></svg>
       </a>
-      <a aria-label="TikTok" href="https://www.tiktok.com/@amsucc_bespoke?_t=ZS-8zKn89RgIKq&_r=1" target="_blank" rel="noopener">
+      <a aria-label="TikTok" href="https://www.tiktok.com/@fawlux" target="_blank" rel="noopener">
         <svg viewBox="0 0 24 24" class="icon"><path d="M21 9.5a7.5 7.5 0 01-5-1.8v6.6a6.3 6.3 0 11-5-6.1v3.7a2.6 2.6 0 102.1 2.6V2h2.9a5.7 5.7 0 004 3.8V9.5z"/></svg>
       </a>
     </div>
   </div>
-  <div class="copyright">© 2025 AMSUCC BESPOKE. All Rights Reserved.</div>
+  <div class="copyright">© 2025 FAWLUX BESPOKE. All Rights Reserved.</div>
 </footer>
 
 </body>
