--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAWLUX BESPOKE — Gallery</title>
-  <meta name="description" content="View FAWLUX BESPOKE gallery of premium agbada, kaftan, shirts, trousers, and bespoke suits. Perfectly stitched craftsmanship in Lagos.">
+  <title>FAWLUX — Gallery</title>
+  <meta name="description" content="View FAWLUX gallery of premium agbada, kaftan, shirts, trousers, and bespoke suits. Perfectly stitched craftsmanship in Lagos.">
   <meta name="keywords" content="FAWLUX, bespoke, tailor, gallery, agbada, kaftan, native wear, suits, Lagos, tailoring portfolio">
   <link rel="icon" type="image/png" href="favicon.png">
   <!-- Google Search Console Verification -->
@@ -15,8 +15,8 @@
   {
     "@context": "https://schema.org",
     "@type": "CollectionPage",
-    "name": "FAWLUX BESPOKE Gallery",
-    "description": "Gallery of premium menswear tailoring by FAWLUX BESPOKE",
+    "name": "FAWLUX Gallery",
+    "description": "Gallery of premium menswear tailoring by FAWLUX",
     "url": "https://fawlux.netlify.app/gallery.html",
     "mainEntity": {
       "@type": "ItemList",
@@ -50,6 +50,12 @@
 
 <body>
 
+<!-- Loading Spinner -->
+<div id="loading-spinner" class="loading-spinner">
+  <div class="spinner"></div>
+  <p>FAWLUX</p>
+</div>
+
 <!-- Floating WhatsApp Button -->
 <a href="https://wa.me/2348079444199?text=Hello%20FAWLUX!%20I'd%20like%20to%20book%20an%20appointment." 
    class="whatsapp-float" 
@@ -64,7 +70,7 @@
 <header class="site-header">
   <div class="container nav-wrapper">
     <a class="brand" href="index.html" aria-label="FAWLUX Home">
-      <span class="brand-text">FAWLUX <em>BESPOKE</em></span>
+      <span class="brand-text">FAWLUX</span>
     </a>
 
     <div class="header-controls">
@@ -102,20 +108,28 @@
 <section class="container gallery-grid fade-in">
   <div class="image-grid">
     <figure class="gallery-item">
-      <img src="https://i.postimg.cc/8zRchXb5/463EFB3C-1F71-46FA-B7CE-3FFD362B04B8.png" alt="FAWLUX BESPOKE Premium Agbada Tailoring" loading="lazy">
-      <figcaption>Premium Agbada</figcaption>
+      <img src="https://i.postimg.cc/8zRchXb5/463EFB3C-1F71-46FA-B7CE-3FFD362B04B8.png" 
+           alt="Abdulkareem Fawaz, CEO of FAWLUX (formerly AMSUCC BESPOKE) bespoke tailoring in Lagos wearing premium kaftan" 
+           loading="lazy">
+      <figcaption>What does your style say about you?</figcaption>
     </figure>
     <figure class="gallery-item">
-      <img src="https://i.postimg.cc/wMkH1npF/A45B9D28-75E9-4F8A-BA67-E5824A852F6E.jpg" alt="FAWLUX BESPOKE Custom Kaftan Design" loading="lazy">
-      <figcaption>Custom Kaftan</figcaption>
+      <img src="https://i.postimg.cc/wMkH1npF/A45B9D28-75E9-4F8A-BA67-E5824A852F6E.jpg" 
+           alt="Premium embroidered Kaftan by FAWLUX bespoke tailors in Lagos Nigeria" 
+           loading="lazy">
+      <figcaption>Premium Embroidered Kaftan</figcaption>
     </figure>
     <figure class="gallery-item">
-      <img src="https://i.postimg.cc/285gd1F8/329E64F0-3C86-4FE6-9489-1A2FC3CA3A7E.jpg" alt="FAWLUX BESPOKE Bespoke Shirt & Trousers" loading="lazy">
-      <figcaption>Bespoke Shirt & Trousers</figcaption>
+      <img src="https://i.postimg.cc/285gd1F8/329E64F0-3C86-4FE6-9489-1A2FC3CA3A7E.jpg" 
+           alt="Bold blue bespoke kaftan tailored by FAWLUX bespoke tailoring in Lagos Nigeria" 
+           loading="lazy">
+      <figcaption>Bold in blue. A testament to sharp tailoring and vibrant expression.</figcaption>
     </figure>
     <figure class="gallery-item">
-      <img src="https://i.postimg.cc/nLfdWr7K/419CD854-1538-4A36-B727-08006AF245DA.jpg" alt="FAWLUX BESPOKE Expert Craftsmanship" loading="lazy">
-      <figcaption>Expert Craftsmanship</figcaption>
+      <img src="https://i.postimg.cc/nLfdWr7K/419CD854-1538-4A36-B727-08006AF245DA.jpg" 
+           alt="FAWLUX CEO Abdulkareem Fawaz showcasing bespoke shirt and trouser craftsmanship in Lagos" 
+           loading="lazy">
+      <figcaption>Bespoke shirt and trouser</figcaption>
     </figure>
   </div>
 </section>
@@ -126,10 +140,10 @@
 
 <footer class="site-footer">
   <div class="container footer-grid">
-    <div class="foot-brand">
-      <div class="brand-line">FAWLUX <em>BESPOKE</em></div>
+    <a href="index.html" class="foot-brand">
+      <div class="brand-line">FAWLUX</div>
       <div class="tagline">Perfectly stitched.</div>
-    </div>
+    </a>
     <div class="foot-links">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
@@ -147,7 +161,7 @@
       </a>
     </div>
   </div>
-  <div class="copyright">© 2025 FAWLUX BESPOKE. All Rights Reserved.</div>
+  <div class="copyright">© 2025 FAWLUX. All Rights Reserved.</div>
 </footer>
 
 </body>
