--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAWLUX BESPOKE — Perfectly stitched.</title>
-  <meta name="description" content="FAWLUX BESPOKE crafts premium menswear in Lagos: agbada, kaftan, shirts, and trousers. Perfectly stitched. Book an appointment on WhatsApp.">
+  <title>FAWLUX — Perfectly stitched.</title>
+  <meta name="description" content="FAWLUX crafts premium menswear in Lagos: agbada, kaftan, shirts, and trousers. Perfectly stitched. Book an appointment on WhatsApp.">
   <meta name="keywords" content="FAWLUX, bespoke, tailor, menswear, agbada, kaftan, native wear, Lagos, Badagry, Oko-Afo, tailoring">
   <link rel="icon" type="image/png" href="favicon.png">
   <!-- Google Search Console Verification -->
@@ -43,7 +43,7 @@
 <!-- Loading Spinner -->
 <div id="loading-spinner" class="loading-spinner">
   <div class="spinner"></div>
-  <p>FAWLUX BESPOKE</p>
+  <p>FAWLUX</p>
 </div>
 
 <!-- Floating WhatsApp Button -->
@@ -60,7 +60,7 @@
 <header class="site-header">
   <div class="container nav-wrapper">
     <a class="brand" href="index.html" aria-label="FAWLUX Home">
-      <span class="brand-text">FAWLUX <em>BESPOKE</em></span>
+      <span class="brand-text">FAWLUX</span>
     </a>
 
     <div class="header-controls">
@@ -88,11 +88,10 @@
   </div>
 </header>
 
-<!-- Rest of your index.html content remains exactly the same -->
 <section class="hero fade-in">
   <div class="container hero-inner">
     <h1>Premium Menswear, <span class="accent">Perfectly Stitched</span>.</h1>
-    <p class="lead">At FAWLUX BESPOKE, we craft timeless pieces — agbada, kaftan, shirts and trousers — tailored to your exact fit and lifestyle.</p>
+    <p class="lead">At FAWLUX, we craft timeless pieces — agbada, kaftan, shirts and trousers — tailored to your exact fit and lifestyle.</p>
     <div class="hero-cta">
       <a class="btn-cta" href="https://wa.me/2348079444199" target="_blank" rel="noopener">Book an Appointment</a>
       <a class="btn-ghost" href="gallery.html">View Gallery</a>
@@ -100,9 +99,8 @@
   </div>
 </section>
 
-<!-- All other sections remain exactly the same -->
 <section class="about container fade-in">
-  <h2>About FAWLUX </h2>
+  <h2>About FAWLUX</h2>
   <p>Founded by Abdulkareem Fawaz, the visionary behind FAWLUX (formerly AMSUCC BESPOKE),
 we are a Lagos-based menswear brand driven by precision, artistry, and timeless style.
 From regal nativewear to refined English tailoring, every piece embodies excellence in fit, fabric, and finishing —
@@ -197,7 +195,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
       </div>
       <div class="portfolio-item single-image">
         <div class="portfolio-image">
-          <img src="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg" alt="Premium Agbada with gold embroidery by FAWLUX BESPOKE" loading="lazy">
+          <img src="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg" alt="Premium Agbada with gold embroidery tailored by FAWLUX Lagos Nigeria" loading="lazy">
         </div>
         <div class="portfolio-info">
           <h4>Royal Agbada</h4>
@@ -214,7 +212,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
       <div class="portfolio-slider small-slider">
         <div class="portfolio-slide active">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/HxJvZGnR/2-CF76677-775-F-45-CD-8316-897-A9525-FA1-E.jpg" alt="Embroidered Kaftan design by FAWLUX BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/HxJvZGnR/2-CF76677-775-F-45-CD-8316-897-A9525-FA1-E.jpg" alt="Embroidered Kaftan design by FAWLUX bespoke tailors in Lagos" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Kaftan Detail</h4>
@@ -223,7 +221,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
         </div>
         <div class="portfolio-slide">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/Ls1d0ZJF/726-F423-D-A05-E-43-EC-9103-56968043-ADCF.jpg" alt="Detailed Kaftan embroidery work by FAWLUX BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/Ls1d0ZJF/726-F423-D-A05-E-43-EC-9103-56968043-ADCF.jpg" alt="Detailed Kaftan embroidery work by FAWLUX master tailors Lagos" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Embroidered Kaftan</h4>
@@ -257,7 +255,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
       <div class="portfolio-slider small-slider">
         <div class="portfolio-slide active">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/MHQ4TkJC/1-DE946-ED-13-A9-4-A88-B72-C-C857690-E688-C.jpg" alt="Bespoke Shirt by FAWLUX BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/MHQ4TkJC/1-DE946-ED-13-A9-4-A88-B72-C-C857690-E688-C.jpg" alt="Bespoke Shirt by FAWLUX Lagos Nigeria tailoring studio" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Bespoke Shirt and Trouser</h4>
@@ -266,7 +264,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
         </div>
         <div class="portfolio-slide">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/1z9RkB17/6606-A1-B9-ED4-A-4-DCC-9-EF1-FA4-BE8642-D04.jpg" alt="Custom tailored trousers by FAWLUX BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/1z9RkB17/6606-A1-B9-ED4-A-4-DCC-9-EF1-FA4-BE8642-D04.jpg" alt="Custom tailored trousers by FAWLUX bespoke tailors in Lagos" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Bespoke Shirt and Trouser</h4>
@@ -300,7 +298,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
       <div class="portfolio-slider small-slider">
         <div class="portfolio-slide active">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/MG8DY2wW/F23-CBE3-E-6-FC8-404-E-B8-F1-BE3-E96-EA758-C.jpg" alt="Traditional native attire by FAWLUX BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/MG8DY2wW/F23-CBE3-E-6-FC8-404-E-B8-F1-BE3-E96-EA758-C.jpg" alt="Traditional native attire by FAWLUX bespoke tailoring Lagos" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Complete Native Set</h4>
@@ -309,7 +307,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
         </div>
         <div class="portfolio-slide">
           <div class="portfolio-image">
-            <img src="https://i.postimg.cc/QxFgcN2c/F88-AD4-C4-A386-4058-ADA8-0-E5-BE93-C12-F6.jpg" alt="Complete native wear set by FAWLUX BESPOKE" loading="lazy">
+            <img src="https://i.postimg.cc/QxFgcN2c/F88-AD4-C4-A386-4058-ADA8-0-E5-BE93-C12-F6.jpg" alt="Complete native wear set by FAWLUX Lagos Nigeria tailors" loading="lazy">
           </div>
           <div class="portfolio-info">
             <h4>Complete Native Set</h4>
@@ -370,10 +368,10 @@ Every stitch is intentional — because you deserve nothing less.</p>
 
 <footer class="site-footer">
   <div class="container footer-grid">
-    <div class="foot-brand">
-      <div class="brand-line">FAWLUX <em>BESPOKE</em></div>
+    <a href="index.html" class="foot-brand">
+      <div class="brand-line">FAWLUX</div>
       <div class="tagline">Perfectly stitched.</div>
-    </div>
+    </a>
     <div class="foot-links">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
@@ -391,7 +389,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
       </a>
     </div>
   </div>
-  <div class="copyright">© 2025 FAWLUX BESPOKE. All Rights Reserved.</div>
+  <div class="copyright">© 2025 FAWLUX. All Rights Reserved.</div>
 </footer>
 
 <!-- Back to Top Button -->
