--- a/gallery.html
+++ b/gallery.html
@@ -44,8 +44,9 @@
   }
   </script>
   
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
