--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
    <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+<!-- Universal Social Media Tags -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://fawlux.netlify.app/">
+<meta property="og:title" content="FAWLUX — Perfectly Stitched">
+<meta property="og:description" content="Premium menswear tailoring in Lagos: agbada, kaftan, shirts, and trousers.">
+<meta property="og:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:site_name" content="FAWLUX">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="FAWLUX — Perfectly Stitched">
+<meta name="twitter:description" content="Premium menswear tailoring in Lagos: agbada, kaftan, shirts, and trousers.">
+<meta name="twitter:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+
 </head>
 
 <body>
