--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,21 @@
     <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+<!-- Universal Social Media Tags -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://fawlux.netlify.app/gallery.html">
+<meta property="og:title" content="FAWLUX Gallery — Premium Menswear">
+<meta property="og:description" content="View our collection of agbada, kaftan, shirts, and bespoke suits.">
+<meta property="og:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:site_name" content="FAWLUX">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="FAWLUX Gallery — Premium Menswear">
+<meta name="twitter:description" content="View our collection of agbada, kaftan, shirts, and bespoke suits.">
+<meta name="twitter:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+
 </head>
 
 <body>
