--- a/index.html
+++ b/index.html
@@ -222,30 +222,66 @@ Every stitch is intentional — because you deserve nothing less.</p>
   </div>
 </section>
 
-
 <!-- Portfolio Highlights -->
 <section class="portfolio-highlights container fade-in">
   <h2>Our Featured Work</h2>
   <p class="section-subtitle">A glimpse of our craftsmanship in agbada, kaftan, and bespoke tailoring</p>
 
   <div class="portfolio-sections">
-    <!-- Agbada Section - Single Image -->
+    <!-- Agbada Section - Now a Slider with 3 Images -->
     <div class="portfolio-section">
       <div class="section-header">
         <h3>Agbada</h3>
       </div>
-      <div class="portfolio-item single-image">
-        <div class="portfolio-image">
-          <img src="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg" alt="Premium Agbada with gold embroidery tailored by FAWLUX Lagos Nigeria" loading="lazy">
+      <div class="portfolio-slider small-slider">
+        <div class="portfolio-slide active">
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/2jGwcYn1/FB8D45C4-09A9-470E-8EE7-0858F22B8EBF.png" alt="Luxury Agbada with intricate embroidery by FAWLUX Lagos" loading="lazy">
+          </div>
+          <div class="portfolio-info">
+            <h4>Embroidered Agbada</h4>
+            <p>Traditional Agbada with modern tailoring and premium detailing</p>
+          </div>
         </div>
-        <div class="portfolio-info">
-          <h4>Royal Agbada</h4>
-          <p>Traditional elegance with premium embroidery and modern fit</p>
+        <div class="portfolio-slide">
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/HWvM8kQZ/AC5981B1-9DFE-47CF-A22C-AA978F4FCBF8.png" alt="Gold embroidered Agbada design by FAWLUX master tailors" loading="lazy">
+          </div>
+          <div class="portfolio-info">
+            <h4>Gold Embroidered Agbada</h4>
+            <p>Exquisite gold thread work on premium Agbada fabric</p>
+          </div>
+        </div>
+        <div class="portfolio-slide">
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/cCP696mb/C284080D-CCF7-44F6-A191-55BBBEAB5555.png" alt="Elegant Agbada design by FAWLUX Nigeria" loading="lazy">
+          </div>
+          <div class="portfolio-info">
+            <h4>Elegant Agbada Design</h4>
+            <p>Full traditional Agbada ensemble with elegant embroidery</p>
+          </div>
+        </div>
+        <div class="slider-controls">
+          <button class="slider-arrow prev-arrow" aria-label="Previous agbada image">
+            <svg viewBox="0 0 24 24" width="16" height="16">
+              <path fill="currentColor" d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+            </svg>
+          </button>
+          <div class="slider-dots">
+            <span class="dot active" data-slide="0"></span>
+            <span class="dot" data-slide="1"></span>
+            <span class="dot" data-slide="2"></span>
+          </div>
+          <button class="slider-arrow next-arrow" aria-label="Next agbada image">
+            <svg viewBox="0 0 24 24" width="16" height="16">
+              <path fill="currentColor" d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+            </svg>
+          </button>
         </div>
       </div>
     </div>
 
-    <!-- Kaftan Section - Slider with 2 Images -->
+    <!-- Kaftan Section - Slider with 3 Images (Added 3rd image) -->
     <div class="portfolio-section">
       <div class="section-header">
         <h3>Kaftan</h3>
@@ -257,7 +293,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
           </div>
           <div class="portfolio-info">
             <h4>Kaftan Detail</h4>
-            <p>Premium kaftan</p>
+            <p>Premium kaftan with intricate embroidery work</p>
           </div>
         </div>
         <div class="portfolio-slide">
@@ -269,6 +305,15 @@ Every stitch is intentional — because you deserve nothing less.</p>
             <p>Close-up view of intricate embroidery and premium stitching</p>
           </div>
         </div>
+        <div class="portfolio-slide">
+          <div class="portfolio-image">
+            <img src="https://i.postimg.cc/4ddzj76K/81A57184-5BD7-4CCD-B52B-1FBDA8D93FEF.jpg" alt="Elegant Kaftan design by FAWLUX Lagos Nigeria" loading="lazy">
+          </div>
+          <div class="portfolio-info">
+            <h4>Elegant Kaftan</h4>
+            <p>Sophisticated kaftan design with modern tailoring</p>
+          </div>
+        </div>
         <div class="slider-controls">
           <button class="slider-arrow prev-arrow" aria-label="Previous kaftan image">
             <svg viewBox="0 0 24 24" width="16" height="16">
@@ -278,6 +323,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
           <div class="slider-dots">
             <span class="dot active" data-slide="0"></span>
             <span class="dot" data-slide="1"></span>
+            <span class="dot" data-slide="2"></span>
           </div>
           <button class="slider-arrow next-arrow" aria-label="Next kaftan image">
             <svg viewBox="0 0 24 24" width="16" height="16">
@@ -288,7 +334,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
       </div>
     </div>
 
-    <!-- Shirt & Trousers Section - Slider with 2 Images -->
+    <!-- Shirt & Trousers Section - Slider with 2 Images (Unchanged) -->
     <div class="portfolio-section">
       <div class="section-header">
         <h3>Shirt & Trousers</h3>
@@ -331,7 +377,7 @@ Every stitch is intentional — because you deserve nothing less.</p>
       </div>
     </div>
 
-    <!-- Native Set Section - Slider with 2 Images -->
+    <!-- Native Set Section - Slider with 2 Images (Unchanged) -->
     <div class="portfolio-section">
       <div class="section-header">
         <h3>Native Wear</h3>
