--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="FAWLUX — Perfectly Stitched">
   <meta name="twitter:description" content="Premium menswear tailoring in Lagos: agbada, kaftan, shirts, and trousers.">
-  <meta name="twitter:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+  <meta name="twitter:image" content="https://i.postimg.cc/2jGwcYn1/FB8D45C4-09A9-470E-8EE7-0858F22B8EBF.png">
 
   <link rel="stylesheet" href="style.css">
 
