--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="FAWLUX Gallery — Premium Menswear">
   <meta name="twitter:description" content="View our collection of agbada, kaftan, shirts, and bespoke suits.">
-  <meta name="twitter:image" content="https://i.postimg.cc/dDPn3Lq8/6-E22-B2-B9-5147-4-A12-80-A7-8105947-F1672.jpg">
+  <meta name="twitter:image" content="https://i.postimg.cc/2jGwcYn1/FB8D45C4-09A9-470E-8EE7-0858F22B8EBF.png">
 
   <link rel="stylesheet" href="style.css">
 
@@ -158,7 +158,7 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <a href="index.html" class="foot-brand">
-      <div class="brand-line">FAWLUX</div>
+      <div class="brand-line">F A W L U X</div>
       <div class="tagline">Perfectly stitched.</div>
     </a>
     <div class="foot-links">
